--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -12,7 +12,7 @@
 
                 <div style="margin:1em 0 .5em;padding-left:5px;">
                     <h1 style="display:inline-block;vertical-align:middle;margin: 0;">${HeaderSelectServer}</h1>
-                    <a class="accentButton accentButton-g" style="display:inline-block;vertical-align:middle;margin-top:0;" href="https://github.com/MediaBrowser/Wiki/wiki/Media%20Browser%20Connect" target="_blank">
+                    <a class="accentButton accentButton-g" style="display:inline-block;vertical-align:middle;margin-top:0;" href="https://github.com/MediaBrowser/Wiki/wiki/Emby%20Connect" target="_blank">
                         <i class="fa fa-info-circle"></i>
                         ${ButtonHelp}
                     </a>
