--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -121,6 +121,7 @@
                             <option value="420000">420kbps</option>
                             <option value="400000">400kbps</option>
                             <option value="320000">320kbps</option>
+                            <option value="192000">192kbps</option>
                         </select>
                     </div>
                     <br />
