add setting to control transcodng throttle

--- a/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
@@ -44,6 +44,11 @@
                     <br />
                     <ul data-role="listview" class="ulForm">
                         <li>
+                            <input type="checkbox" id="chkEnableThrottle" data-mini="true" />
+                            <label for="chkEnableThrottle">${OptionEnableTranscodingThrottle}</label>
+                            <div class="fieldDescription">${OptionEnableTranscodingThrottleHelp}</div>
+                        </li>
+                        <li>
                             <label for="txtTranscodingTempPath">${LabelTranscodingTempPath}</label>
                             <div style="display: inline-block; width: 92%;">
                                 <input type="text" id="txtTranscodingTempPath" />
