--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -11,6 +11,7 @@
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="livetvstatus.html" data-role="button">${TabStatus}</a>
+                    <a href="appservices.html?context=livetv" data-role="button">${TabServices}</a>
                     <a href="#" data-role="button" class="ui-btn-active">${TabSettings}</a>
                 </div>
 
