--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
@@ -11,6 +11,7 @@
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="#" data-role="button" class="ui-btn-active">${TabStatus}</a>
+                    <a href="appservices.html?context=livetv" data-role="button">${TabServices}</a>
                     <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
                 </div>
 
