--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
@@ -76,6 +76,12 @@
                     <div class="latestItemsList">
 
                     </div>
+
+                    <br />
+                    <div data-role="controlgroup">
+                        <label for="chkHidePlayedFromLatest">${OptionHideWatchedContentFromLatestMedia}</label>
+                        <input id="chkHidePlayedFromLatest" type="checkbox" />
+                    </div>
                 </div>
 
             </div>
