combine movie fixes

--- a/MediaBrowser.WebDashboard/dashboard-ui/gamegenres.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamegenres.html
@@ -6,7 +6,7 @@
 <body>
     <div id="gameGenresPage" data-role="page" class="page libraryPage listPage">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="gamesrecommended.html">${TabSuggested}</a>
+            <a href="gamesrecommended.html">${TabSuggestions}</a>
             <a href="games.html">${TabGames}</a>
             <a href="gamesystems.html">${TabGameSystems}</a>
             <a href="#" class="ui-btn-active">${TabGenres}</a>
