--- a/MediaBrowser.WebDashboard/dashboard-ui/gamesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamesrecommended.html
@@ -6,7 +6,7 @@
 <body>
     <div id="gamesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="game">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabSuggested}</a>
+            <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="games.html">${TabGames}</a>
             <a href="gamesystems.html">Game Systems</a>
             <a href="gamegenres.html">${TabGenres}</a>
