--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -8,8 +8,7 @@
     <div id="itemByNameDetailPage" data-role="page" class="page libraryPage itemDetailPage lightBackdropPage">
         <div id="movieGenreTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="movieslatest.html">${TabLatest}</a>
-                <a href="moviesrecommended.html">${TabSuggested}</a>
+                <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
@@ -20,8 +19,7 @@
         </div>
         <div id="moviePeopleTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="movieslatest.html">${TabLatest}</a>
-                <a href="moviesrecommended.html">${TabSuggested}</a>
+                <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
@@ -32,8 +30,7 @@
         </div>
         <div id="movieStudioTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="movieslatest.html">${TabLatest}</a>
-                <a href="moviesrecommended.html">${TabSuggested}</a>
+                <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html">${TabMovies}</a>
                 <a href="movietrailers.html">${TabTrailers}</a>
                 <a href="collections.html?context=movies">${TabCollections}</a>
@@ -44,7 +41,7 @@
         </div>
         <div id="tvGenreTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html">${TabSuggested}</a>
+                <a href="tvrecommended.html">${TabSuggestions}</a>
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
@@ -56,7 +53,7 @@
         </div>
         <div id="tvPeopleTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html">${TabSuggested}</a>
+                <a href="tvrecommended.html">${TabSuggestions}</a>
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
@@ -68,7 +65,7 @@
         </div>
         <div id="tvStudioTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html">${TabSuggested}</a>
+                <a href="tvrecommended.html">${TabSuggestions}</a>
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html">${TabShows}</a>
@@ -80,7 +77,7 @@
         </div>
         <div id="musicGenreTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggested}</a>
+                <a href="musicrecommended.html">${TabSuggestions}</a>
                 <a href="songs.html">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
@@ -91,7 +88,7 @@
         </div>
         <div id="artistTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggested}</a>
+                <a href="musicrecommended.html">${TabSuggestions}</a>
                 <a href="songs.html">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
@@ -102,7 +99,7 @@
         </div>
         <div id="gameGenreTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggested}</a>
+                <a href="gamesrecommended.html">${TabSuggestions}</a>
                 <a href="games.html">${TabGames}</a>
                 <a href="gamesystems.html">Game Systems</a>
                 <a href="gamegenres.html" class="ui-btn-active">${TabGenres}</a>
@@ -111,7 +108,7 @@
         </div>
         <div id="gameStudioTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggested}</a>
+                <a href="gamesrecommended.html">${TabSuggestions}</a>
                 <a href="games.html">${TabGames}</a>
                 <a href="gamesystems.html">Game Systems</a>
                 <a href="gamegenres.html">${TabGenres}</a>
