--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -31,8 +31,7 @@
 
         <div id="movieTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="movieslatest.html">${TabLatest}</a>
-                <a href="moviesrecommended.html">${TabSuggested}</a>
+                <a href="moviesrecommended.html">${TabSuggestions}</a>
                 <a href="movies.html" class="lnkMovies">${TabMovies}</a>
                 <a href="movietrailers.html" class="lnkMovieTrailers">${TabTrailers}</a>
                 <a href="collections.html?context=movies" class="lnkCollections">${TabCollections}</a>
@@ -43,7 +42,7 @@
         </div>
         <div id="tvShowsTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html">${TabSuggested}</a>
+                <a href="tvrecommended.html">${TabSuggestions}</a>
                 <a href="tvlatest.html">${TabLatest}</a>
                 <a href="tvupcoming.html">${TabUpcoming}</a>
                 <a href="tvshows.html" class="ui-btn-active">${TabShows}</a>
@@ -55,7 +54,7 @@
         </div>
         <div id="songTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggested}</a>
+                <a href="musicrecommended.html">${TabSuggestions}</a>
                 <a href="songs.html" class="ui-btn-active">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
@@ -66,7 +65,7 @@
         </div>
         <div id="albumTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggested}</a>
+                <a href="musicrecommended.html">${TabSuggestions}</a>
                 <a href="songs.html">${TabSongs}</a>
                 <a href="musicalbums.html" class="ui-btn-active">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
@@ -77,7 +76,7 @@
         </div>
         <div id="musicVideoTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggested}</a>
+                <a href="musicrecommended.html">${TabSuggestions}</a>
                 <a href="songs.html">${TabSongs}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
                 <a href="musicalbumartists.html">${TabAlbumArtists}</a>
@@ -88,7 +87,7 @@
         </div>
         <div id="gameTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggested}</a>
+                <a href="gamesrecommended.html">${TabSuggestions}</a>
                 <a href="games.html" class="ui-btn-active">${TabGames}</a>
                 <a href="gamesystems.html">Game Systems</a>
                 <a href="gamegenres.html">${TabGenres}</a>
@@ -97,7 +96,7 @@
         </div>
         <div id="gameSystemTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggested}</a>
+                <a href="gamesrecommended.html">${TabSuggestions}</a>
                 <a href="games.html">${TabGames}</a>
                 <a href="gamesystems.html" class="ui-btn-active">${TabGameSystems}</a>
                 <a href="gamegenres.html">${TabGenres}</a>
