--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
@@ -6,7 +6,7 @@
 <body>
     <div id="liveTvItemsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
         <div class="libraryViewNav">
-            <a href="livetvsuggested.html" class="ui-btn-active">${TabSuggested}</a>
+            <a href="livetvsuggested.html" class="ui-btn-active">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
             <a href="livetvchannels.html">${TabChannels}</a>
             <a href="livetvrecordings.html">${TabRecordings}</a>
