--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -6,7 +6,7 @@
 <body>
     <div id="liveTvSuggestedPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
         <div class="libraryViewNav">
-            <a href="#" class="ui-btn-active">${TabSuggested}</a>
+            <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
             <a href="livetvchannels.html">${TabChannels}</a>
             <a href="livetvrecordings.html">${TabRecordings}</a>
