--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -7,8 +7,7 @@
     <div id="moviesPage" data-role="page" class="page libraryPage collectionEditorPage">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="movieslatest.html">${TabLatest}</a>
-            <a href="moviesrecommended.html">${TabSuggested}</a>
+            <a href="moviesrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabMovies}</a>
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
