--- a/MediaBrowser.WebDashboard/dashboard-ui/musicgenres.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicgenres.html
@@ -6,7 +6,7 @@
 <body>
     <div id="musicGenresPage" data-role="page" class="page libraryPage">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="musicrecommended.html">${TabSuggested}</a>
+            <a href="musicrecommended.html">${TabSuggestions}</a>
             <a href="songs.html">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="musicalbumartists.html">${TabAlbumArtists}</a>
