--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -13,7 +13,7 @@
             <a href="#" class="ui-btn-active">${TabUpcoming}</a>
         </div>
         <div class="libraryViewNav scopedLibraryViewNav" style="display: none;">
-            <a href="tvrecommended.html">${TabSuggested}</a>
+            <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html" class="ui-btn-active">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
