--- a/MediaBrowser.WebDashboard/dashboard-ui/collections.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/collections.html
@@ -7,8 +7,7 @@
     <div id="boxsetsPage" data-role="page" class="page libraryPage backdropPage collectionEditorPage" data-backdroptype="movie,boxset">
 
         <div class="libraryViewNav scopedLibraryViewNav movieTabs">
-            <a href="movieslatest.html">${TabLatest}</a>
-            <a href="moviesrecommended.html">${TabSuggested}</a>
+            <a href="moviesrecommended.html">${TabSuggestions}</a>
             <a href="movies.html">${TabMovies}</a>
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="#" class="ui-btn-active">${TabCollections}</a>
