--- a/MediaBrowser.WebDashboard/dashboard-ui/games.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/games.html
@@ -6,7 +6,7 @@
 <body>
     <div id="gamesPage" data-role="page" class="page libraryPage listPage">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="gamesrecommended.html">${TabSuggested}</a>
+            <a href="gamesrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabGames}</a>
             <a href="gamesystems.html">${TabGameSystems}</a>
             <a href="gamegenres.html">${TabGenres}</a>
