--- a/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/gamesystems.html
@@ -6,7 +6,7 @@
 <body>
     <div id="gamesystemsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="gamesystem">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="gamesrecommended.html">${TabSuggested}</a>
+            <a href="gamesrecommended.html">${TabSuggestions}</a>
             <a href="games.html">${TabGames}</a>
             <a href="#" class="ui-btn-active">${TabGameSystems}</a>
             <a href="gamegenres.html">${TabGenres}</a>
