--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -6,7 +6,7 @@
 <body>
     <div id="liveTvRecordingsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
         <div class="libraryViewNav">
-            <a href="livetvsuggested.html">${TabSuggested}</a>
+            <a href="livetvsuggested.html">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
             <a href="livetvchannels.html">${TabChannels}</a>
             <a href="livetvrecordings.html" class="ui-btn-active">${TabRecordings}</a>
