--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -7,8 +7,7 @@
     <div id="moviesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="movie">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="movieslatest.html">${TabLatest}</a>
-            <a href="#" class="ui-btn-active">${TabSuggested}</a>
+            <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="movies.html">${TabMovies}</a>
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
@@ -27,6 +26,14 @@
 
                     <div id="resumableItems" class="itemsContainer">
                     </div>
+                </div>
+
+                <div>
+                    <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestMovies}</h1>
+                    <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                </div>
+
+                <div id="recentlyAddedItems" class="itemsContainer">
                 </div>
 
                 <div class="recommendations">
