--- a/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
@@ -7,8 +7,7 @@
     <div id="movieStudiosPage" data-role="page" class="page libraryPage">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="movieslatest.html">${TabLatest}</a>
-            <a href="moviesrecommended.html">${TabSuggested}</a>
+            <a href="moviesrecommended.html">${TabSuggestions}</a>
             <a href="movies.html">${TabMovies}</a>
             <a href="movietrailers.html">${TabTrailers}</a>
             <a href="collections.html?context=movies">${TabCollections}</a>
