--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -6,7 +6,7 @@
 <body>
     <div id="musicRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabSuggested}</a>
+            <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="songs.html">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="musicalbumartists.html">${TabAlbumArtists}</a>
