--- a/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicvideos.html
@@ -7,7 +7,7 @@
     <div id="musicVideosPage" data-role="page" class="page libraryPage">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="musicrecommended.html">${TabSuggested}</a>
+            <a href="musicrecommended.html">${TabSuggestions}</a>
             <a href="songs.html">${TabSongs}</a>
             <a href="musicalbums.html">${TabAlbums}</a>
             <a href="musicalbumartists.html">${TabAlbumArtists}</a>
