--- a/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
@@ -6,7 +6,7 @@
 <body>
     <div id="tvNextUpPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html">${TabSuggested}</a>
+            <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="#" class="ui-btn-active">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
