--- a/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvpeople.html
@@ -6,7 +6,7 @@
 <body>
     <div id="tvPeoplePage" data-role="page" class="page libraryPage">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html">${TabSuggested}</a>
+            <a href="tvrecommended.html">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
