--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -14,7 +14,7 @@
             <a href="tvupcoming.html">${TabUpcoming}</a>
         </div>
         <div class="libraryViewNav scopedLibraryViewNav" style="display: none;">
-            <a href="tvrecommended.html" class="ui-btn-active">${TabSuggested}</a>
+            <a href="tvrecommended.html" class="ui-btn-active">${TabSuggestions}</a>
             <a href="tvlatest.html">${TabLatest}</a>
             <a href="tvupcoming.html">${TabUpcoming}</a>
             <a href="tvshows.html">${TabShows}</a>
