--- a/MediaBrowser.WebDashboard/dashboard-ui/collections.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/collections.html
@@ -51,7 +51,8 @@
                         <select id="selectView">
                             <option value="Poster">${OptionPoster}</option>
                             <option value="List">${OptionList}</option>
-                        </select>
+                            <option value="Thumb">${OptionThumb}</option>
+                       </select>
                     </div>
                     <br />
                     <div>
