restore model properties

--- a/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
@@ -32,7 +32,7 @@
                 <div class="detailSectionHeader">${HeaderAvailableServices}</div>
                 <div class="catalog"></div>
 
-                <div class="supporterPromotion syncPromotion" style="display:none;">
+                <div class="staticSupporterPromotion supporterPromotion syncPromotion" style="display:none;">
                     <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
                         <div>
                             ${HeaderSyncRequiresSupporterMembership}
