--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -20,7 +20,7 @@
                     <progress max="100" min="0" style="width:100px;display:none;" class="syncProgress"></progress>
                 </div>
                 <br />
-                <div class="supporterPromotion syncPromotion" style="display:none;">
+                <div class="staticSupporterPromotion supporterPromotion syncPromotion" style="display:none;">
                     <a class="btn btnActionAccent" href="supporter.html" style="font-size:14px;">
                         <div>
                             ${HeaderSyncRequiresSupporterMembership}
