--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -55,7 +55,7 @@
                     <form class="addUserForm">
                         <div>
                             <label for="txtConnectUsername">${LabelConnectGuestUserName}</label>
-                            <input type="text" id="txtConnectUsername" value="" placeholder="Username" required="required">
+                            <input type="text" id="txtConnectUsername" value="" placeholder="${PlaceholderUsername}" required="required">
                             <div class="fieldDescription">
                                 <div>${LabelConnectGuestUserNameHelp}</div>
                                 <div style="margin-top: .75em;"><a href="http://emby.media/connect" target="_blank">${ButtonLearnMoreAboutEmbyConnect}</a></div>
