add sports to suggested tv

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -33,6 +33,14 @@
                     </div>
                     <br />
                 </div>
+                <div id="upcomingSports">
+                    <h1 class="listHeader">${HeaderUpcomingSports}</h1>
+                    <div class="upcomingSportsItems itemsContainer"></div>
+                    <div>
+                        <a data-role="button" href="livetvitems.html?type=sports" data-inline="true" data-mini="true">${ButtonMoreItems}</a>
+                    </div>
+                    <br />
+                </div>
             </div>
         </div>
     </div>
