--- a/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
@@ -21,7 +21,7 @@
                 <div class="listTopPaging">
                 </div>
             </div>
-            <div id="items" class="itemsContainer paddedItemsContainer"></div>
+            <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
         </div>
 
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
