probe live streams after opening

--- a/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
@@ -11,6 +11,7 @@
         </div>
 
         <div data-role="content">
+            <h2 style="text-align:center;" class="playlistName"></h2>
             <div class="viewSettings">
                 <div class="listTopPaging">
                     &nbsp;
