--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -24,6 +24,11 @@
                     <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
                 </div>
 
+                <div data-role="controlgroup" data-type="horizontal" class="localnav notificationsTabs" data-mini="true" style="display:none;">
+                    <a href="notificationsettings.html" data-role="button">${TabNotifications}</a>
+                    <a href="#" data-role="button" class="ui-btn-active">${TabServices}</a>
+                </div>
+
                 <div class="readOnlyContent">
 
                     <h2 class="pluginName"></h2>
