--- a/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
@@ -24,6 +24,13 @@
                     </div>
                 </div>
 
+                <div class="sectionTabs notificationsSectionTabs" style="display:none;">
+                    <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
+                        <a href="notificationsettings.html" data-role="button">${TabNotifications}</a>
+                        <a href="#" data-role="button" class="ui-btn-active">${TabServices}</a>
+                    </div>
+                </div>
+
                 <div class="detailSectionHeader">${HeaderInstalledServices}</div>
                 <div class="installedPlugins"></div>
                 <br />
