--- a/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/notificationsettings.html
@@ -9,6 +9,11 @@
         <div data-role="content">
             <div class="content-primary">
 
+                <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
+                    <a href="#" data-role="button" class="ui-btn-active">${TabNotifications}</a>
+                    <a href="appservices.html?context=notifications" data-role="button">${TabServices}</a>
+                </div>
+
                 <div class="readOnlyContent">
                     <p>${HeaderNotificationList}</p>
                     <p>${HeaderSendNotificationHelp}</p>
