--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -12,6 +12,7 @@
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="playbackconfiguration.html" data-role="button">${TabGeneral}</a>
                     <a href="#" data-role="button" class="ui-btn-active">${TabCinemaMode}</a>
+                    <a href="streamingsettings.html" data-role="button">${TabStreaming}</a>
                     <a href="encodingsettings.html" data-role="button">${TabTranscoding}</a>
                 </div>
 
