improve ffmpeg cleanup

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceswebclient.html
@@ -30,9 +30,9 @@
                             <option value="latestmedia">${OptionLatestMedia}</option>
                             <option value="latestchannelmedia">${OptionLatestChannelMedia}</option>
                             <option value="latesttvrecordings">${OptionLatestTvRecordings}</option>
-                            <option value="librarytiles">${OptionMyViews}</option>
-                            <option value="smalllibrarytiles">${OptionMyViewsSmall}</option>
-                            <option value="librarybuttons">${OptionMyViewsButtons}</option>
+                            <option value="librarytiles">${OptionMyMedia}</option>
+                            <option value="smalllibrarytiles">${OptionMyMediaSmall}</option>
+                            <option value="librarybuttons">${OptionMyMediaButtons}</option>
                             <option value="folders">${OptionLibraryFolders}</option>
                             <option value="resume">${OptionResumablemedia}</option>
                         </select>
@@ -45,9 +45,9 @@
                             <option value="latestmedia">${OptionLatestMedia}</option>
                             <option value="latestchannelmedia">${OptionLatestChannelMedia}</option>
                             <option value="latesttvrecordings">${OptionLatestTvRecordings}</option>
-                            <option value="librarytiles">${OptionMyViews}</option>
-                            <option value="smalllibrarytiles">${OptionMyViewsSmall}</option>
-                            <option value="librarybuttons">${OptionMyViewsButtons}</option>
+                            <option value="librarytiles">${OptionMyMedia}</option>
+                            <option value="smalllibrarytiles">${OptionMyMediaSmall}</option>
+                            <option value="librarybuttons">${OptionMyMediaButtons}</option>
                             <option value="folders">${OptionLibraryFolders}</option>
                             <option value="resume">${OptionResumablemedia}</option>
                             <option value="none">${OptionNone}</option>
@@ -61,9 +61,9 @@
                             <option value="latestmedia">${OptionLatestMedia}</option>
                             <option value="latestchannelmedia">${OptionLatestChannelMedia}</option>
                             <option value="latesttvrecordings">${OptionLatestTvRecordings}</option>
-                            <option value="librarytiles">${OptionMyViews}</option>
-                            <option value="smalllibrarytiles">${OptionMyViewsSmall}</option>
-                            <option value="librarybuttons">${OptionMyViewsButtons}</option>
+                            <option value="librarytiles">${OptionMyMedia}</option>
+                            <option value="smalllibrarytiles">${OptionMyMediaSmall}</option>
+                            <option value="librarybuttons">${OptionMyMediaButtons}</option>
                             <option value="folders">${OptionLibraryFolders}</option>
                             <option value="resume">${OptionResumablemedia}</option>
                             <option value="none">${OptionNone}</option>
@@ -77,9 +77,9 @@
                             <option value="latestmedia">${OptionLatestMedia}</option>
                             <option value="latestchannelmedia">${OptionLatestChannelMedia}</option>
                             <option value="latesttvrecordings">${OptionLatestTvRecordings}</option>
-                            <option value="librarytiles">${OptionMyViews}</option>
-                            <option value="smalllibrarytiles">${OptionMyViewsSmall}</option>
-                            <option value="librarybuttons">${OptionMyViewsButtons}</option>
+                            <option value="librarytiles">${OptionMyMedia}</option>
+                            <option value="smalllibrarytiles">${OptionMyMediaSmall}</option>
+                            <option value="librarybuttons">${OptionMyMediaButtons}</option>
                             <option value="folders">${OptionLibraryFolders}</option>
                             <option value="resume">${OptionResumablemedia}</option>
                             <option value="none">${OptionNone}</option>
