--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardfinish.html
@@ -21,7 +21,7 @@
                         <img src="css/images/clients/playstore.png" title="Android via Google Play Store" /></a>
                     <a href="https://itunes.apple.com/us/app/media-browser-for-ios/id705058087" target="_blank">
                         <img src="css/images/clients/ios.png" title="iOS" /></a>
-                    <a href="http://www.roku.com/channels/#!details/44191/media-browser-for-roku" target="_blank">
+                    <a href="https://www.roku.com/channels#!details/44191/emby" target="_blank">
                         <img src="css/images/clients/roku.jpg" title="Roku" />
                     </a>
                     <a href="http://www.windowsphone.com/s?appid=f4971ed9-f651-4bf6-84bb-94fd98613b86" target="_blank">
