remote control fix

--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -16,19 +16,22 @@
         </div>
         <div data-role="content">
             <div class="ehsContent squareEhsContent">
-                <h1 class="listHeader">${HeaderLatestMusic}</h1>
+                
+                <div class="homePageSection">
+                    <h1 class="listHeader">${HeaderLatestMusic}</h1>
 
-                <div id="recentlyAddedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                    <div id="recentlyAddedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                    </div>
                 </div>
 
-                <div id="recentlyPlayed" style="display: none;">
+                <div id="recentlyPlayed" style="display: none;" class="homePageSection">
                     <h1 class="listHeader">${HeaderRecentlyPlayed}</h1>
 
                     <div id="recentlyPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
                     </div>
                 </div>
 
-                <div id="topPlayed" style="display: none;">
+                <div id="topPlayed" style="display: none;" class="homePageSection">
                     <h1 class="listHeader">${HeaderFrequentlyPlayed}</h1>
 
                     <div id="topPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
