updated image magick

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -29,7 +29,14 @@
                                 <option value="5">5</option>
                                 <option value="6">6</option>
                                 <option value="7">7</option>
-                            </select>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                           </select>
                             <div class="fieldDescription">${LabelNumberOfGuideDaysHelp}</div>
                         </li>
                     </ul>
