live tv updates

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -13,15 +13,12 @@
             <a href="livetvtimers.html">${TabScheduled}</a>
             <a href="livetvseriestimers.html">${TabSeries}</a>
         </div>
-        <div data-role="content" style="padding-top: 5px;">
+        <div data-role="content" style="padding-top: 5px;padding-left:0!important;padding-right:0!important;">
 
             <div>
                 <div class="viewSettings">
-                    <select id="selectDate" data-mini="true" data-icon="calendar" data-inline="true">
+                    <select id="selectDate" data-mini="true" data-inline="true">
                     </select>
-                    <div style="display: inline-block; vertical-align: middle;">
-                        ${HeaderChannels}
-                    </div>
                     <div style="display: inline-block; vertical-align: middle;" class="channelPaging">
                     </div>
                 </div>
