--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -17,12 +17,12 @@
             <div class="ehsContent">
                 <div id="activeRecordings" style="display: none;">
                     <h1 class="listHeader">${HeaderActiveRecordings}</h1>
-                    <div class="recordingItems"></div>
+                    <div class="recordingItems itemsContainer"></div>
                     <br />
                 </div>
                 <div id="latestRecordings" style="display: none;">
                     <h1 class="listHeader">${HeaderLatestRecordings}</h1>
-                    <div class="recordingItems"></div>
+                    <div class="recordingItems itemsContainer"></div>
                     <br />
                 </div>
                 <div id="recordingGroups" style="display: none;">
