--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -24,6 +24,13 @@
                     </div>
                 </div>
 
+                <div id="playlists" style="display: none;" class="homePageSection">
+                    <h1 class="listHeader">${HeaderPlaylists}</h1>
+
+                    <div class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                    </div>
+                </div>
+
                 <div id="recentlyPlayed" style="display: none;" class="homePageSection">
                     <h1 class="listHeader">${HeaderRecentlyPlayed}</h1>
 
