--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordinglist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordinglist.html
@@ -14,7 +14,7 @@
             <a href="livetvseriestimers.html">${TabSeries}</a>
         </div>
         <div data-role="content">
-            <div class="viewSettings">
+            <div class="viewSettings" style="margin:.5em 0;">
 
                 <h1 class="listName" style="margin: 0 1em 0 0; display: inline-block; vertical-align: middle;"></h1>
 
@@ -23,7 +23,7 @@
                 <div class="listTopPaging">
                 </div>
             </div>
-            <div id="items" class="itemsContainer"></div>
+            <div id="items" class="itemsContainer" style="text-align:center;"></div>
         </div>
     </div>
 </body>
