--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvseriestimer.html
@@ -37,39 +37,39 @@
                             <h3>${HeaderDays}</h3>
                             <div data-role="controlgroup">
 
-                                <input type="checkbox" data-mini="true" id="chkSunday" />
+                                <input type="checkbox" id="chkSunday" />
                                 <label for="chkSunday">${OptionSunday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkMonday" />
+                                <input type="checkbox" id="chkMonday" />
                                 <label for="chkMonday">${OptionMonday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkTuesday" />
+                                <input type="checkbox" id="chkTuesday" />
                                 <label for="chkTuesday">${OptionTuesday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkWednesday" />
+                                <input type="checkbox" id="chkWednesday" />
                                 <label for="chkWednesday">${OptionWednesday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkThursday" />
+                                <input type="checkbox" id="chkThursday" />
                                 <label for="chkThursday">${OptionThursday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkFriday" />
+                                <input type="checkbox" id="chkFriday" />
                                 <label for="chkFriday">${OptionFriday}</label>
 
-                                <input type="checkbox" data-mini="true" id="chkSaturday" />
+                                <input type="checkbox" id="chkSaturday" />
                                 <label for="chkSaturday">${OptionSaturday}</label>
                             </div>
                         </li>
                         <li>
-                            <label for="chkNewOnly">${OptionRecordOnlyNewEpisodes}</label>
-                            <input type="checkbox" id="chkNewOnly" data-mini="true" />
-                        </li>
-                        <li>
-                            <label for="chkAnyTime">${OptionRecordAnytime}</label>
-                            <input type="checkbox" id="chkAnyTime" data-mini="true" />
-                        </li>
-                        <li>
-                            <label for="chkAllChannels">${OptionRecordOnAllChannels}</label>
-                            <input type="checkbox" id="chkAllChannels" data-mini="true" />
+                            <h3>${HeaderRepeatingOptions}</h3>
+                            <div data-role="controlgroup">
+
+                                <label for="chkNewOnly">${OptionRecordOnlyNewEpisodes}</label>
+                                <input type="checkbox" id="chkNewOnly" />
+                                <label for="chkAnyTime">${OptionRecordAnytime}</label>
+                                <input type="checkbox" id="chkAnyTime" />
+                                <label for="chkAllChannels">${OptionRecordOnAllChannels}</label>
+                                <input type="checkbox" id="chkAllChannels" />
+                            </div>
                         </li>
                     </ul>
                     <div data-role="collapsible" data-mini="true">
@@ -101,10 +101,10 @@
                     </div>
                     <br />
                     <div>
-                        <button type="submit" data-theme="a" data-icon="check" data-mini="true">
+                        <button type="submit" data-theme="a" data-icon="check">
                             ${ButtonSave}
                         </button>
-                        <button type="button" onclick="history.back();" data-icon="delete" data-mini="true">
+                        <button type="button" onclick="history.back();" data-icon="delete">
                             ${ButtonCancel}
                         </button>
                     </div>
