live tv guide improvements

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvSuggestedPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}">
+    <div id="liveTvSuggestedPage" data-role="page" class="page libraryPage liveTvPage backdropPage globalBackdropPage" data-contextname="${HeaderLiveTv}" data-backdroptype="series,movie">
         <div class="libraryViewNav">
             <a href="#" class="ui-btn-active">${TabSuggestions}</a>
             <a href="livetvguide.html">${TabGuide}</a>
