--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -26,6 +26,24 @@
             <div class="ehsContent homeEhsContent">
                 <div class="sections"></div>
             </div>
+
+        </div>
+
+        <div data-role="popup" class="popupConfigureViews" data-overlay-theme="b" data-theme="a" data-dismissible="false" data-positionto="window">
+            <div class="ui-bar-a" style="text-align: center; padding: 0 20px; position: relative;">
+
+                <h3 class="identificationHeader">${HeaderMyPreferences}</h3>
+            </div>
+
+            <div data-role="content" style="max-width:600px;">
+
+                <h1>${HeaderWelcomeExclamation}</h1>
+                <p>${MyPreferencesWelcomeMessage1}</p>
+                <p style="margin:1.5em 0 2em;">${MyPreferencesWelcomeMessage2}</p>
+                <a href="#" data-role="button" data-icon="action" data-theme="b" data-mini="true" class="btnMyPreferences">${ButtonMyPreferencesWelcomeYes}</a>
+                <a href="#" data-rel="back" data-role="button" data-icon="delete" data-mini="true">${ButtonMyPreferencesWelcomeNo}</a>
+                <div class="fieldDescription" style="margin-top:1em;">${ToAccessPreferencesHelp}</div>
+            </div>
         </div>
     </div>
 </body>
