--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -15,27 +15,31 @@
         </div>
         <div data-role="content" style="padding-top: 5px;padding-left:0!important;padding-right:0!important;">
 
-            <div>
-                <div class="viewSettings">
-                    <select id="selectDate" data-mini="true" data-inline="true">
-                    </select>
-                    <div style="display: inline-block; vertical-align: middle;" class="channelPaging">
+            <div class="tvGuide">
+                <div style="white-space: nowrap;position:fixed;top:99px;left:0;z-index:100; max-width: 100%;">
+                    <div class="channelTimeslotHeader">
+                        <div style="padding-top:4px;">
+                            <a href="#popupConfig" data-rel="popup" class="accentButton" style="display:block;padding-left:5px;"><i class="fa fa-calendar"></i><span class="currentDate"></span></a>
+                        </div>
                     </div>
+                    <div class="timeslotHeaders"></div>
                 </div>
 
-                <div>
-                    <div style="position: relative; margin: 0 auto; display: inline-block; text-align: left; max-width: 100%;">
+                <div class="programContainer">
 
-                        <div style="white-space: nowrap;">
-                            <div class="channelTimeslotHeader">&nbsp;</div>
-                            <div class="timeslotHeaders"></div>
-                        </div>
+                    <div class="channelList"></div>
+                    <div class="programGrid"></div>
+                </div>
+                <div class="channelPaging"></div>
+            </div>
+            <div data-role="popup" id="popupConfig" data-theme="b">
+                <div class="ui-bar-a" style="text-align: center; padding: 0 20px; position: relative;">
 
-                        <div style="white-space: nowrap;">
-                            <div class="channelList"></div>
-                            <div class="programGrid"></div>
-                        </div>
-                    </div>
+                    <h3 class="identificationHeader" style="margin:.5em 0;">${HeaderSelectDate}</h3>
+                </div>
+                <div data-role="content">
+                    <select id="selectDate" data-mini="true" data-inline="true"></select>
+                    <a href="#" data-rel="back" data-role="button" data-mini="true" data-icon="delete">${ButtonCancel}</a>
                 </div>
             </div>
             <div data-role="popup" class="popupLoading" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width: 250px;" data-history="false">
