rework server sync

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecording.html
@@ -41,6 +41,7 @@
             <span id="playButtonContainer" style="display: none;">
                 <button id="btnPlay" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
             </span>
+            <a class="btnSync hide" data-role="button" data-icon="cloud" data-inline="true" data-mini="true" href="#">${ButtonSync}</a>
             <span id="deleteButtonContainer" style="display: none;">
                 <button id="btnDelete" type="button" data-icon="delete" data-inline="true" data-mini="true">${ButtonDelete}</button>
             </span>
