--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -21,7 +21,10 @@
                     <br />
                 </div>
                 <div id="latestRecordings" style="display: none;">
-                    <h1 class="listHeader">${HeaderLatestRecordings}</h1>
+                    <div>
+                        <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestRecordings}</h1>
+                        <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-cloud"></i>${ButtonSync}</a>
+                    </div>
                     <div class="recordingItems itemsContainer"></div>
                     <br />
                 </div>
