--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -18,7 +18,7 @@
             <div class="tvGuide">
                 <div style="white-space: nowrap;position:fixed;top:99px;left:0;z-index:100; max-width: 100%;">
                     <div class="channelTimeslotHeader">
-                        <div style="padding-top:4px;">
+                        <div class="timeslotHeaderInner">
                             <a href="#popupConfig" data-rel="popup" class="accentButton" style="display:block;padding-left:5px;"><i class="fa fa-calendar"></i><span class="currentDate"></span></a>
                         </div>
                     </div>
