--- a/MediaBrowser.WebDashboard/dashboard-ui/syncsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncsettings.html
@@ -29,8 +29,8 @@
                             </div>
                         </li>
                         <li>
-                            <label for="txtUploadRateLimit">${LabelUploadSpeedLimit}</label>
-                            <input type="number" id="txtUploadSpeedLimit" min="0" step=".5" required="required" />
+                            <label for="txtUploadSpeedLimit">${LabelUploadSpeedLimit}</label>
+                            <input type="number" id="txtUploadSpeedLimit" min="0" step=".5" />
                         </li>
                         <li>
                             <label for="txtCpuCoreLimit">${LabelConversionCpuCoreLimit}</label>
