added user view setting

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
@@ -27,7 +27,7 @@
                         <div class="fieldDescription">${LabelSelectFolderGroupsHelp}</div>
                     </div>
                     <br />
-                    
+
                     <div>
                         <div data-role="controlgroup">
                             <label for="chkDisplayCollectionView">${LabelDisplayCollectionsView}</label>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="fieldDescription">${LabelDisplayCollectionsViewHelp}</div>
                     </div>
-                    
+
                     <br />
                     <div data-role="controlgroup">
                         <label for="chkDisplayFolderView">${LabelDisplayFoldersView}</label>
@@ -51,6 +51,19 @@
                             <div class="fieldDescription">${LabelGroupChannelsIntoViewsHelp}</div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="detailSection viewStylesSection" style="display:none;">
+                <div class="detailSectionHeader">
+                    ${HeaderViewStyles}
+                </div>
+                <div class="detailSectionContent">
+                    <p>${LabelSelectViewStyles}</p>
+                    <div class="viewStylesList">
+
+                    </div>
+                    <div class="fieldDescription">${LabelSelectViewStylesHelp}</div>
                 </div>
             </div>
 
