added a photo view

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -36,6 +36,12 @@
                                     <button id="btnDelete" type="button" data-icon="delete" data-mini="true" data-inline="true">${ButtonDelete}</button>
                                 </div>
                             </div>
+                            <div style="display: inline-block;vertical-align:middle;margin-left: 1em;" class="hide">
+                                <div id="refreshLoading" style="display:none;">
+                                    <div class="circle1" style="top:-10px;"></div>
+                                    <div style="margin-top: -15px;"></div>
+                                </div>
+                            </div>
                         </div>
 
                         <div style="padding: 10px 0;">
