--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -40,6 +40,13 @@
                 <a href="moviestudios.html">${TabStudios}</a>
             </div>
         </div>
+        <div class="itemTabs photoTabs" style="display: none;">
+            <div class="libraryViewNav scopedLibraryViewNav">
+                <a href="photos.html" class="ui-btn-active lnkPhotoAlbums">${TabAlbums}</a>
+                <a href="photos.html?context=photos-photos" class="lnkPhotos">${TabPhotos}</a>
+                <a href="photos.html?context=photos-videos" class="lnkVideos">${TabVideos}</a>
+            </div>
+        </div>
         <div id="tvShowsTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="tvrecommended.html">${TabSuggestions}</a>
